--- a/views/note.ejs
+++ b/views/note.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -25,7 +25,7 @@
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
-                <a href="javascript:;">账户</a>
+                <a href="javascript:;">CharlesFeng</a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;">修改密码</a></dd>
                     <dd><a href="javascript:;">退出登录</a></dd>
@@ -36,17 +36,16 @@
     </div>
 
 
-    <div class="layui-side layui-bg-black" style="margin-top: 15px; margin-bottom: 7px">
+    <!-- 笔记的左边导航部分 -->
+    <div class="layui-side layui-bg-black" style="margin-left: 7px;margin-top: 15px; margin-bottom: 7px; top: 53px;">
         <div class="layui-side-scroll">
             <div class="brief_note">
-                <div class="row" style="height: 25px">
+                <div style="height: 25px">
                     <div class="layui-col-xs8">
                         <div class="brief_note_title">
                             你的第一本笔记
                         </div>
-                        <div class="row">
-                            <div class="brief_note_time">昨天</div>
-                        </div>
+                        <div class="brief_note_time">昨天</div>
                     </div>
                     <!-- 分享、删除按钮 -->
                     <div class="brief_share_delete_btn_group layui-btn-group layui-col-xs4">
@@ -59,23 +58,19 @@
                     </div>
                 </div>
                 <hr class="layui-bg-green" style="margin-top: 17px">
-                <div class="row">
-                    <div class="brief_note_content"><p>
-                            1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
-                    </div>
+                <div class="brief_note_content"><p>
+                        1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
                 </div>
             </div>
 
             <div style="height: 5px;"></div>
             <div class="brief_note">
-                <div class="row" style="height: 25px">
+                <div style="height: 25px">
                     <div class="layui-col-xs8">
                         <div class="brief_note_title">
                             你的第一本笔记
                         </div>
-                        <div class="row">
-                            <div class="brief_note_time">昨天</div>
-                        </div>
+                        <div class="brief_note_time">昨天</div>
                     </div>
                     <!-- 分享、删除按钮 -->
                     <div class="brief_share_delete_btn_group layui-btn-group layui-col-xs4">
@@ -88,23 +83,19 @@
                     </div>
                 </div>
                 <hr class="layui-bg-green" style="margin-top: 17px">
-                <div class="row">
-                    <div class="brief_note_content"><p>
-                            1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
-                    </div>
+                <div class="brief_note_content"><p>
+                        1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
                 </div>
             </div>
 
             <div style="height: 5px;"></div>
             <div class="brief_note">
-                <div class="row" style="height: 25px">
+                <div style="height: 25px">
                     <div class="layui-col-xs8">
                         <div class="brief_note_title">
                             你的第一本笔记
                         </div>
-                        <div class="row">
-                            <div class="brief_note_time">昨天</div>
-                        </div>
+                        <div class="brief_note_time">昨天</div>
                     </div>
                     <!-- 分享、删除按钮 -->
                     <div class="brief_share_delete_btn_group layui-btn-group layui-col-xs4">
@@ -117,23 +108,19 @@
                     </div>
                 </div>
                 <hr class="layui-bg-green" style="margin-top: 17px">
-                <div class="row">
-                    <div class="brief_note_content"><p>
-                            1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
-                    </div>
+                <div class="brief_note_content"><p>
+                        1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
                 </div>
             </div>
 
             <div style="height: 5px;"></div>
             <div class="brief_note">
-                <div class="row" style="height: 25px">
+                <div style="height: 25px">
                     <div class="layui-col-xs8">
                         <div class="brief_note_title">
                             你的第一本笔记
                         </div>
-                        <div class="row">
-                            <div class="brief_note_time">昨天</div>
-                        </div>
+                        <div class="brief_note_time">昨天</div>
                     </div>
                     <!-- 分享、删除按钮 -->
                     <div class="brief_share_delete_btn_group layui-btn-group layui-col-xs4">
@@ -146,23 +133,19 @@
                     </div>
                 </div>
                 <hr class="layui-bg-green" style="margin-top: 17px">
-                <div class="row">
-                    <div class="brief_note_content"><p>
-                            1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
-                    </div>
+                <div class="brief_note_content"><p>
+                        1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
                 </div>
             </div>
 
             <div style="height: 5px;"></div>
             <div class="brief_note">
-                <div class="row" style="height: 25px">
+                <div style="height: 25px">
                     <div class="layui-col-xs8">
                         <div class="brief_note_title">
                             你的第一本笔记
                         </div>
-                        <div class="row">
-                            <div class="brief_note_time">昨天</div>
-                        </div>
+                        <div class="brief_note_time">昨天</div>
                     </div>
                     <!-- 分享、删除按钮 -->
                     <div class="brief_share_delete_btn_group layui-btn-group layui-col-xs4">
@@ -175,23 +158,19 @@
                     </div>
                 </div>
                 <hr class="layui-bg-green" style="margin-top: 17px">
-                <div class="row">
-                    <div class="brief_note_content"><p>
-                            1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
-                    </div>
+                <div class="brief_note_content"><p>
+                        1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
                 </div>
             </div>
 
             <div style="height: 5px;"></div>
             <div class="brief_note">
-                <div class="row" style="height: 25px">
+                <div style="height: 25px">
                     <div class="layui-col-xs8">
                         <div class="brief_note_title">
                             你的第一本笔记
                         </div>
-                        <div class="row">
-                            <div class="brief_note_time">昨天</div>
-                        </div>
+                        <div class="brief_note_time">昨天</div>
                     </div>
                     <!-- 分享、删除按钮 -->
                     <div class="brief_share_delete_btn_group layui-btn-group layui-col-xs4">
@@ -204,29 +183,112 @@
                     </div>
                 </div>
                 <hr class="layui-bg-green" style="margin-top: 17px">
-                <div class="row">
-                    <div class="brief_note_content"><p>
-                            1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
-                    </div>
+                <div class="brief_note_content"><p>
+                        1234567891234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123491234567891234912345678912349123456789123456789123456789123456789</p>
                 </div>
             </div>
-
         </div>
     </div>
 
-    <div class="layui-body" style="margin: 15px 7px 7px 20px;">
-        <!-- 内容主体区域 -->
-        <div>内容主体区域</div>
+    <!-- 笔记内容主体部分 -->
+    <div class="layui-body" style="margin: 15px 7px 7px 20px; background: #393D49; left:295px; top: 53px">
+        <div style="padding-top: 10px">
+            <!--  笔记名字 -->
+            <div class="layui-col-xs4">
+                <label class="layui-col-xs1 note_title_icon">
+                    <i class="layui-icon">&#xe617;</i>
+                </label>
+                <div class="layui-col-xs8 note_title_outer">
+                    <input type="text" class=" note_title" placeholder="您的笔记">
+                </div>
+            </div>
+
+            <!-- 所属笔记本 -->
+            <div class="layui-col-xs4">
+                <label class="layui-col-xs1 note_title_icon">
+                    <i class="layui-icon">&#xe622;</i>
+                </label>
+                <div class='layui-col-xs8 note_title_outer'>
+                    <p class="note_title">您的笔记本</p>
+                </div>
+            </div>
+
+            <!-- 所属标签 -->
+            <div class="layui-col-xs4">
+                <label class="layui-col-xs1 note_title_icon">
+                    <i class="layui-icon">&#xe64c;</i>
+                </label>
+                <div class="layui-col-xs8 note_title_outer">
+                    <input type="text" class=" note_title" placeholder="默认无标签">
+                </div>
+            </div>
+        </div>
+        <div class="note_div">
+            <div class="summernote mynote" style="z-index: 1000; color: #BDC0BA">第一次的笔记内容</div>
+        </div>
     </div>
 
 </div>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="/javascripts/jquery-3.2.1.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="/javascripts/bootstrap.js"></script>
+<!-- include libraries(jQuery, bootstrap, fontawesome) -->
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+<!-- include summernote css/js-->
+<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
+
+
 <script src="/layui/layui.js"></script>
+<script src="/javascripts/summernote-zh-CN.js"></script>
 <script>
-  //JavaScript代码区域
   layui.use('element', function () {
     var element = layui.element;
-
   });
+
+
+  $(".note_div").click(function (e) {
+    $('.mynote').summernote({
+        lang: 'zh-CN',
+        toolbar: [
+          ['style', ['fontname', 'style']],
+          ['font', ['bold', 'italic', 'underline', 'clear', 'strikethrough']],
+          ['fontsize', ['fontsize']],
+          ['color', ['color']],
+          ['para', ['ul', 'ol', 'paragraph']],
+          ['height', ['height']],
+          ['insert', ['table', 'picture', 'fullscreen']]
+        ],
+        placeholder: 'write here...',
+        height: 570,
+        minHeight: null,
+        maxHeight: null,
+        focus: true
+      }
+    );
+    var markupStr = $('.mynote').summernote('code');
+    alert(markupStr);
+    e.stopPropagation();
+  });
+
+  $("body").click(function (e) {
+    $('.mynote').summernote('destroy');
+    if (e) e.stack;
+  });
+
+  $(".fill_space").click(function (e) {
+    $('.mynote').summernote('destroy');
+    if (e) e.stack;
+  });
+
+
 </script>
 </body>
+
+<div class="fill_space" style="height: 800px"></div>
 </html>
