--- a/views/note.ejs
+++ b/views/note.ejs
@@ -1,3 +1,4 @@
+<!-- 笔记 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -230,22 +231,18 @@
 
 </div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/javascripts/jquery-3.2.1.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/javascripts/bootstrap.js"></script>
 <!-- include libraries(jQuery, bootstrap, fontawesome) -->
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet">
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script>
+<link href="/stylesheets/bootstrap.css" rel="stylesheet">
+<link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
+<script src="/javascripts/jquery-3.2.1.min.js"></script>
+<script src="/javascripts/bootstrap.js"></script>
 <!-- include summernote css/js-->
 <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css" rel="stylesheet">
 <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
+<script src="/javascripts/summernote-zh-CN.js"></script>
 
 
 <script src="/layui/layui.js"></script>
-<script src="/javascripts/summernote-zh-CN.js"></script>
 <script>
   layui.use('element', function () {
     var element = layui.element;
@@ -271,17 +268,19 @@
         focus: true
       }
     );
-    var markupStr = $('.mynote').summernote('code');
-    alert(markupStr);
     e.stopPropagation();
   });
 
   $("body").click(function (e) {
+    var markupStr = $('.mynote').summernote('code');
+    alert(markupStr);
     $('.mynote').summernote('destroy');
     if (e) e.stack;
   });
 
   $(".fill_space").click(function (e) {
+    var markupStr = $('.mynote').summernote('code');
+    alert(markupStr);
     $('.mynote').summernote('destroy');
     if (e) e.stack;
   });
