--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,15 @@
+<!-- 新建笔记 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>layout 后台大布局 - Layui</title>
-    <link rel="stylesheet" href="/layui/css/layui.css" media="all">
-
+    <title>Marvel Note</title>
+    <link rel="stylesheet" href="/layui/css/layui.css">
+    <link rel="stylesheet" href="/stylesheets/note.css">
     <style>
-        /*body {*/
-        /*margin: 10px;*/
-        /*}*/
-
-        footer {
-            height: 50px;
-            margin-top: -50px;
+        body {
+            margin: 7px;
         }
     </style>
 </head>
@@ -21,7 +17,6 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo"><img src="/images/logo.png" class="layui-nav-img"></div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">新建笔记</a></li>
             <li class="layui-nav-item"><a href="">笔记</a></li>
@@ -31,7 +26,7 @@
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
-                <a href="javascript:;">账户</a>
+                <a href="javascript:;">CharlesFeng</a>
                 <dl class="layui-nav-child">
                     <dd><a href="javascript:;">修改密码</a></dd>
                     <dd><a href="javascript:;">退出登录</a></dd>
@@ -40,69 +35,64 @@
         </ul>
     </div>
 
-    <!-- 笔记正文部分 -->
-    <div style="padding: 15px">
-        <div class="layui-col-md3">
-            <ul class="flow-default" style="height: 20px;" id="note_list"></ul>
 
+    <div class="layui-side layui-bg-black" style="width: 99%;margin: 15px 7px 7px;top: 53px;">
+        <div style="padding-top: 15px;padding-left: 15px;padding-right: 15px">
+            <!--  笔记名字 -->
+            <div class="layui-col-xs4">
+                <label class="layui-col-xs1 note_title_icon">
+                    <i class="layui-icon">&#xe617;</i>
+                </label>
+                <div class="layui-col-xs8 note_title_outer">
+                    <input type="text" class=" note_title" placeholder="您的笔记">
+                </div>
+            </div>
 
+            <!-- 所属笔记本 -->
+            <div class="layui-col-xs4">
+                <label class="layui-col-xs1 note_title_icon">
+                    <i class="layui-icon">&#xe622;</i>
+                </label>
+                <div class='layui-col-xs8 note_title_outer'>
+                    <p class="note_title">您的笔记本</p>
+                </div>
+            </div>
+
+            <!-- 所属标签 -->
+            <div class="layui-col-xs4">
+                <label class="layui-col-xs1 note_title_icon">
+                    <i class="layui-icon">&#xe64c;</i>
+                </label>
+                <div class="layui-col-xs8 note_title_outer">
+                    <input type="text" class=" note_title" placeholder="默认无标签">
+                </div>
+            </div>
+            <div class="note_div">
+                <div class="summernote mynote" style="z-index: 1000; color: #BDC0BA">第一次的笔记内容</div>
+            </div>
         </div>
-        <div class="layui-col-md9">
-            <div class="layui-row grid-demo grid-demo-bg1">
-                <div class="layui-col-md12">第一个
-                </div>
-            </div>
-            <div class="layui-row grid-demo grid-demo-bg1">
-                <div class="layui-col-md12">第一个
-                </div>
-            </div>
-            <div class="layui-row grid-demo grid-demo-bg1">
-                <div class="layui-col-md12">第一个
-                </div>
-            </div>
-        </div>
-
     </div>
 </div>
 
-</div>
-
-<!--<footer style="height: 50px;margin-bottom: -50px;">-->
-    <!--<hr class="layui-bg-green">-->
-    <!--<div>-->
-        <!--<p style="text-align: center;">copyright@ charles</p>-->
-    <!--</div>-->
-<!--</footer>-->
-
+<!-- include libraries(jQuery, bootstrap, fontawesome) -->
+<link href="/stylesheets/bootstrap.css" rel="stylesheet">
+<link href="/stylesheets/font-awesome.min.css" rel="stylesheet">
+<script src="/javascripts/jquery-3.2.1.min.js"></script>
+<script src="/javascripts/bootstrap.js"></script>
+<!-- include summernote css/js-->
+<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.css" rel="stylesheet">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
+<script src="/javascripts/summernote-zh-CN.js"></script>
 
 <script src="/layui/layui.js"></script>
+<script src="/javascripts/note_interaction.js"></script>
 <script>
-  //JavaScript代码区域
   layui.use('element', function () {
     var element = layui.element;
-
   });
 
-  layui.use('flow', function () {
-    var flow = layui.flow;
-
-    flow.load({
-      elem: '#note_list' //流加载容器
-      // , scrollElem: '#note_list' //滚动条所在元素，一般不用填，此处只是演示需要。
-      , isAuto: false
-      // , isLazyimg: true
-      , done: function (page, next) { //加载下一页
-        //模拟插入
-        setTimeout(function () {
-          var lis = [];
-          for (var i = 0; i < 6; i++) {
-            lis.push('<li><img lay-src="/images/logo.png" style="width: 130px;height: 130px"></li>')
-          }
-          next(lis.join(''), page < 6); //假设总页数为 6
-        }, 500);
-      }
-    });
-  });
 </script>
 </body>
+
+<div class="fill_space" style="height: 800px"></div>
 </html>
